# MSVC-vcpkg-cpp-configuration

./: CMakeLists.txt  CMakeSettings.json  README.md
vcpkg-test/: CMakeLists.txt  vcpkg-test.cpp  vcpkg-test.h
